--- a/CCPROG3_MCO2/src/DisplaySystem.fxml
+++ b/CCPROG3_MCO2/src/DisplaySystem.fxml
@@ -290,12 +290,7 @@
             </GridPane>
             <ImageView fx:id="farmerFace" fitHeight="97.0" fitWidth="97.0" layoutX="49.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Images/Farmer%20Types%20(Badge)/Default.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="673.0" layoutY="78.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Images/Farmer%20Stats/Coins.png" />
+                  <Image url="@Images/FarmerBadge/Default.png" />
                </image>
             </ImageView>
             <Label fx:id="PlayerCoins" layoutX="709.0" layoutY="77.0" text="50" textFill="WHITE">
@@ -303,11 +298,6 @@
                   <Font name="Agency FB Bold" size="29.0" />
                </font>
             </Label>
-            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="754.0" layoutY="78.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Images/Farmer%20Stats/Experience.png" />
-               </image>
-            </ImageView>
             <Label fx:id="PlayerLevel" layoutX="792.0" layoutY="77.0" text="Lvl. 0" textFill="WHITE">
                <font>
                   <Font name="Agency FB Bold" size="29.0" />
@@ -324,12 +314,22 @@
                   <Font name="Agency FB" size="29.0" />
                </font>
             </Label>
-            <ImageView fx:id="endBtn" fitHeight="52.0" fitWidth="145.0" layoutX="730.0" layoutY="16.0" onMouseClicked="#endDay" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="673.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/FarmerStats/Coins.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="754.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/FarmerStats/Experience.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="endBtn" fitHeight="52.0" fitWidth="145.0" layoutX="730.0" layoutY="17.0" onMouseClicked="#endDay" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/Buttons/EndDay.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="registerBtn" fitHeight="49.0" fitWidth="120.0" layoutX="605.0" layoutY="20.0" onMouseClicked="#registerFarmer" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="registerBtn" fitHeight="49.0" fitWidth="120.0" layoutX="605.0" layoutY="21.0" onMouseClicked="#registerFarmer" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/Buttons/Register.png" />
                </image>
