--- a/CCPROG3_MCO2/src/DisplaySystem.fxml
+++ b/CCPROG3_MCO2/src/DisplaySystem.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="942.0" prefWidth="1058.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DisplaySystem">
+<VBox prefHeight="848.0" prefWidth="1058.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DisplaySystem">
   <children>
     <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="942.0" prefWidth="1060.0" style="-fx-background-color: #252935;" VBox.vgrow="ALWAYS">
          <children>
@@ -324,12 +324,12 @@
                   <Image url="@Images/FarmerStats/Experience.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="endBtn" fitHeight="52.0" fitWidth="145.0" layoutX="920.0" layoutY="24.0" onMouseClicked="#endDay" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="endBtn" fitHeight="52.0" fitWidth="145.0" layoutX="848.0" layoutY="763.0" onMouseClicked="#endDay" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/Buttons/EndDay.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="registerBtn" fitHeight="49.0" fitWidth="120.0" layoutX="795.0" layoutY="28.0" onMouseClicked="#registerFarmer" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="registerBtn" fitHeight="49.0" fitWidth="120.0" layoutX="723.0" layoutY="767.0" onMouseClicked="#registerFarmer" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/Buttons/Register.png" />
                </image>
@@ -381,6 +381,88 @@
                   <ImageView fx:id="WateringCan" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="13.0" onMouseClicked="#useTool" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Images/Tools/WateringCan.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <Label layoutX="723.0" layoutY="397.0" prefHeight="52.0" prefWidth="207.0" text="Seeds" textFill="WHITE">
+               <font>
+                  <Font name="Agency FB" size="42.0" />
+               </font>
+            </Label>
+            <AnchorPane layoutX="723.0" layoutY="463.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+               <children>
+                  <ImageView fx:id="Sunflower" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/Seeds/Sunflower.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <ImageView fx:id="MyStats" fitHeight="49.0" fitWidth="120.0" layoutX="916.0" layoutY="28.0" onMouseClicked="#displayStats" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/Buttons/MyStats.png" />
+               </image>
+            </ImageView>
+            <AnchorPane layoutX="819.0" layoutY="463.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+               <children>
+                  <ImageView fx:id="Rose" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/Seeds/Rose.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="914.0" layoutY="463.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+               <children>
+                  <ImageView fx:id="Tulip" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/Seeds/Tulip.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="723.0" layoutY="558.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+               <children>
+                  <ImageView fx:id="Potato" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/Seeds/Potato.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="819.0" layoutY="558.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+               <children>
+                  <ImageView fx:id="Carrot" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/Seeds/Carrot.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="914.0" layoutY="558.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+               <children>
+                  <ImageView fx:id="Turnip" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/Seeds/Turnip.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="723.0" layoutY="653.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+               <children>
+                  <ImageView fx:id="Apple" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/Seeds/Apple.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="819.0" layoutY="653.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+               <children>
+                  <ImageView fx:id="Mango" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/Seeds/Mango.png" />
                      </image>
                   </ImageView>
                </children>
