new window - farmer stats

--- a/CCPROG3_MCO2/src/DisplaySystem.fxml
+++ b/CCPROG3_MCO2/src/DisplaySystem.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="848.0" prefWidth="1058.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DisplaySystem">
+<VBox prefHeight="848.0" prefWidth="1030.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DisplaySystem">
   <children>
-    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="942.0" prefWidth="1060.0" style="-fx-background-color: #252935;" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="848.0" prefWidth="982.0" style="-fx-background-color: #252935;" VBox.vgrow="ALWAYS">
          <children>
-            <GridPane hgap="10.0" layoutX="61.0" layoutY="151.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickTile" prefHeight="675.0" prefWidth="634.0" vgap="10.0">
+            <GridPane hgap="10.0" layoutX="41.0" layoutY="153.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickTile" prefHeight="675.0" prefWidth="634.0" vgap="10.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -288,59 +288,54 @@
                   </ImageView>
                </children>
             </GridPane>
-            <ImageView fx:id="farmerFace" fitHeight="97.0" fitWidth="97.0" layoutX="23.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="farmerFace" fitHeight="97.0" fitWidth="97.0" layoutX="39.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/FarmerBadge/Default.png" />
                </image>
             </ImageView>
-            <Label fx:id="PlayerCoins" layoutX="899.0" layoutY="84.0" text="50" textFill="WHITE">
+            <Label fx:id="PlayerCoins" layoutX="855.0" layoutY="84.0" text="50" textFill="WHITE">
                <font>
                   <Font name="Agency FB Bold" size="29.0" />
                </font>
             </Label>
-            <Label fx:id="PlayerLevel" layoutX="982.0" layoutY="84.0" text="Lvl. 0" textFill="WHITE">
+            <Label fx:id="PlayerLevel" layoutX="938.0" layoutY="84.0" text="Lvl. 0" textFill="WHITE">
                <font>
                   <Font name="Agency FB Bold" size="29.0" />
                </font>
             </Label>
-            <ProgressBar fx:id="ProgressBar" layoutX="128.0" layoutY="88.0" prefHeight="32.0" prefWidth="220.0" progress="0.0" />
-            <Label fx:id="FarmerName" layoutX="128.0" layoutY="23.0" text="Unregistered" textFill="WHITE">
+            <ProgressBar fx:id="ProgressBar" layoutX="154.0" layoutY="89.0" prefHeight="32.0" prefWidth="220.0" progress="0.0" />
+            <Label fx:id="FarmerName" layoutX="154.0" layoutY="24.0" text="Unregistered" textFill="WHITE">
                <font>
                   <Font name="Agency FB Bold" size="29.0" />
                </font>
             </Label>
-            <Label layoutX="128.0" layoutY="52.0" text="Farmer" textFill="WHITE">
+            <Label layoutX="154.0" layoutY="53.0" text="Farmer" textFill="WHITE">
                <font>
                   <Font name="Agency FB" size="29.0" />
                </font>
             </Label>
-            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="863.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="819.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/FarmerStats/Coins.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="944.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="900.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/FarmerStats/Experience.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="endBtn" fitHeight="52.0" fitWidth="145.0" layoutX="848.0" layoutY="763.0" onMouseClicked="#endDay" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="endBtn" fitHeight="52.0" fitWidth="145.0" layoutX="878.0" layoutY="26.0" onMouseClicked="#endDay" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/Buttons/EndDay.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="registerBtn" fitHeight="49.0" fitWidth="120.0" layoutX="723.0" layoutY="767.0" onMouseClicked="#registerFarmer" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Images/Buttons/Register.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="723.0" layoutY="140.0" prefHeight="52.0" prefWidth="207.0" text="Tool Inventory" textFill="WHITE">
+            <Label layoutX="711.0" layoutY="191.0" prefHeight="52.0" prefWidth="207.0" text="Tool Inventory" textFill="WHITE">
                <font>
                   <Font name="Agency FB" size="42.0" />
                </font>
             </Label>
-            <AnchorPane layoutX="20.0" layoutY="20.0" prefHeight="103.0" prefWidth="103.0" style="-fx-border-color: #FFFFFF;" />
-            <AnchorPane layoutX="723.0" layoutY="198.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane fx:id="FarmerStats" layoutX="36.0" layoutY="21.0" onMouseClicked="#displayStats" prefHeight="103.0" prefWidth="103.0" style="-fx-border-color: #FFFFFF;" />
+            <AnchorPane layoutX="711.0" layoutY="249.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Fertilizer" fitHeight="77.0" fitWidth="61.0" layoutX="16.0" layoutY="5.0" onMouseClicked="#useTool" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -349,7 +344,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="819.0" layoutY="198.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="807.0" layoutY="249.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Plow" fitHeight="74.0" fitWidth="68.0" layoutX="9.0" layoutY="8.0" onMouseClicked="#useTool" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -358,7 +353,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="915.0" layoutY="198.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="903.0" layoutY="249.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Pickaxe" fitHeight="72.0" fitWidth="69.0" layoutX="11.0" layoutY="10.0" onMouseClicked="#useTool" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -367,7 +362,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="723.0" layoutY="294.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="711.0" layoutY="345.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Shovel" fitHeight="76.0" fitWidth="75.0" layoutX="8.0" layoutY="11.0" onMouseClicked="#useTool" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -376,7 +371,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="819.0" layoutY="294.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="807.0" layoutY="345.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="WateringCan" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="13.0" onMouseClicked="#useTool" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -385,12 +380,12 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <Label layoutX="723.0" layoutY="397.0" prefHeight="52.0" prefWidth="207.0" text="Seeds" textFill="WHITE">
+            <Label layoutX="711.0" layoutY="448.0" prefHeight="52.0" prefWidth="207.0" text="Seeds" textFill="WHITE">
                <font>
                   <Font name="Agency FB" size="42.0" />
                </font>
             </Label>
-            <AnchorPane layoutX="723.0" layoutY="463.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="711.0" layoutY="514.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Sunflower" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -399,12 +394,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <ImageView fx:id="MyStats" fitHeight="49.0" fitWidth="120.0" layoutX="916.0" layoutY="28.0" onMouseClicked="#displayStats" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Images/Buttons/MyStats.png" />
-               </image>
-            </ImageView>
-            <AnchorPane layoutX="819.0" layoutY="463.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="807.0" layoutY="514.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Rose" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -413,7 +403,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="914.0" layoutY="463.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="902.0" layoutY="514.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Tulip" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -422,7 +412,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="723.0" layoutY="558.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="711.0" layoutY="609.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Potato" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -431,7 +421,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="819.0" layoutY="558.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="807.0" layoutY="609.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Carrot" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -440,7 +430,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="914.0" layoutY="558.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="902.0" layoutY="609.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Turnip" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -449,7 +439,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="723.0" layoutY="653.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="711.0" layoutY="704.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Apple" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -458,7 +448,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="819.0" layoutY="653.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
+            <AnchorPane layoutX="807.0" layoutY="704.0" prefHeight="87.0" prefWidth="86.0" style="-fx-border-color: #FFFFFF;">
                <children>
                   <ImageView fx:id="Mango" fitHeight="87.0" fitWidth="73.0" layoutX="7.0" layoutY="7.0" onMouseClicked="#plantSeed" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -467,6 +457,16 @@
                   </ImageView>
                </children>
             </AnchorPane>
+            <Label fx:id="GameDay" layoutX="850.0" layoutY="34.0" text="1" textFill="WHITE">
+               <font>
+                  <Font name="Agency FB Bold" size="29.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="32.0" fitWidth="34.0" layoutX="814.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/FarmerStats/Calendar.png" />
+               </image>
+            </ImageView>
          </children>
     </AnchorPane>
   </children>
